Mise à jour du style global avec ajout de couleurs pour l'en-tête et le pied de page, modification des métadonnées du projet et réorganisation des composants de la page d'accueil.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+header, footer{
+  background-color: #D5D1DE
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
